# MatrixOS

Applications/Arpy/: Arpy.cpp  Arpy.h  CMakeLists.txt
Devices/MatrixESP32/: ApplicationList.txt
